src/app/components/map/map.scss
.infobox {
  @include rounded;
  position: absolute;
  background-color:rgba($colorDarkGrey,0.9);
  color: $colorWhite;
  padding: 1.2rem;
  min-width: 14rem;
  max-width: 90%;
  z-index:4;


  li {
    list-style: none;
    margin: 0;
    margin-left: -2rem;
    font-size: 0.9rem;
  }

  address {
    border-bottom: 1px solid $colorWhite;
    @include fontNormal;
  }

  .clickable {
    cursor: pointer;
    color: white;
    @include underline_mix(1px,2px,$colorDarkGrey,$colorWhite);
    &:hover {
      @include underline_mix(1px,2px,transparent,transparent);
    }
  }


}


.hidden {
  display: none !important;
}

.ol-overlay-container {
  .oereb-marker {
    z-index:3;
    position:absolute;
    /* Positionierung des markers */
    left: -16px;
    top: -14px;

    img {
      width:32px;
      height:32px;
    }
  }
}

